--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,6 +1,6 @@
 {
     "device": "cuda",
-    "path": "/path/to/dataset",
+    "path": "E:/ForMaLTeC/Wound_segmentation_III/Data",
     "model_version": "v1.0",
     "encoder": "resnet34",
     "encoder_weights": "imagenet",
