--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,6 +1,6 @@
 {
-    "device": "cuda",
-    "path": "E:/ForMaLTeC/Wound_segmentation_III/Data",
+    "device": "cpu",
+    "path": "C:/users/comi/Desktop/Wound_segmentation_III/Data",
     "model_version": "v1.0",
     "encoder": "resnet34",
     "encoder_weights": "imagenet",
@@ -13,5 +13,6 @@
     "loss": "cross_entropy",
     "metrics": ["accuracy", "iou_score"],
     "segmentation_classes": 2,
-    "classification_classes": 15
+    "classification_classes": 15,
+    "class_weights": [0.1,0.9]
 }
