working on train loop

--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,11 +1,11 @@
 {
-    "device": "cpu",
-    "path": "C:/users/comi/Desktop/Wound_segmentation_III/Data",
+    "device": "cuda",
+    "path": "E:/ForMalTeC/Wound_segmentation_III/Data",
     "model_version": "v1.0",
-    "encoder": "resnet34",
+    "encoder": "resnet101",
     "encoder_weights": "imagenet",
     "activation": "sigmoid",
-    "batch_size": 16,
+    "batch_size": 8,
     "num_epochs": 150,
     "optimizer_lr": 0.001,
     "optimizer": "adam",
