--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,11 +1,11 @@
 {
-    "device": "cpu",
+    "device": "cuda",
     "path": "C:/users/comi/Desktop/Wound_segmentation_III/Data",
-    "model_version": "v1.0",
-    "encoder": "resnet50",
+    "model_version": "v1.1",
+    "encoder": "resnet101",
     "encoder_weights": "imagenet",
     "activation": "sigmoid",
-    "batch_size": 1,
+    "batch_size": 8,
     "num_epochs": 150,
     "optimizer_lr": 0.0001,
     "optimizer": "adam",
@@ -17,5 +17,5 @@
     "class_weights": [0.01,0.99],
     "dice": true,
     "grad_clip_value": 1.0,
-    "display_image": "True"
+    "display_image": "False"
 }
