add multiclass segmentation

--- a/New_Code/configs/preprocessing_config.json
+++ b/New_Code/configs/preprocessing_config.json
@@ -10,6 +10,7 @@
         "scale": [0.8, 1.2]
     },
     "wound_classes": ["background", "wound"],
-    "device": "cuda",
-    "target_size": [640,640]
+    "device": "cpu",
+    "target_size": [640,640],
+    "segmentation": "multiclass"
 }
