--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,7 +1,7 @@
 {
-    "device": "cpu",
-    "path": "C:/users/comi/Desktop/Wound_segmentation_III/Data",
-    "model_version": "v1.1",
+    "device": "cuda",
+    "path": "E:/ForMalTeC/Wound_segmentation_III/Data",
+    "model_version": "v1.2",
     "encoder": "resnet101",
     "encoder_weights": "imagenet",
     "activation": "sigmoid",
@@ -17,5 +17,5 @@
     "dice": true,
     "grad_clip_value": 1.0,
     "display_image": "False",
-    "num_workers": 0
+    "num_workers": 3
 }
