--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,6 +1,7 @@
 {
     "device": "cuda",
     "path": "C:/users/comi/Desktop/Wound_segmentation_III/Data",
+    "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/IRM_Formaltec/New_Code/training",
     "model_version": "v1.2",
     "encoder": "resnet101",
     "encoder_weights": "imagenet",
@@ -12,7 +13,7 @@
     "lr_scheduler_gamma": 0.9,
     "loss": "cross_entropy",
     "metrics": ["accuracy", "iou_score"],
-    "segmentation_classes": 14,
+    "segmentation_classes": 15,
     "class_weights": [0.01,0.99],
     "dice": true,
     "grad_clip_value": 1.0,
