implement swin transformer encoder

--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -3,12 +3,12 @@
     "path": "C:/users/comi/Desktop/Wound_segmentation_III/Data",
     "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/GIT/IRM_Formaltec/New_Code/training",
     "model_version": "v1.2",
-    "encoder": "resnet101",
+    "encoder": "senet154",
     "encoder_weights": "imagenet",
-    "activation": "sigmoid",
-    "batch_size": 8,
+    "activation": "softmax",
+    "batch_size": 10,
     "num_epochs": 150,
-    "optimizer_lr": 0.0001,
+    "optimizer_lr": 0.001,
     "optimizer": "adam",
     "lr_scheduler_gamma": 0.9,
     "loss": "cross_entropy",
