--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,16 +1,16 @@
 {
     "device": "cuda",
-    "path": "C:/users/comi/Desktop/Wound_segmentation_III/Data",
-    "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/GIT/IRM_Formaltec/New_Code/training",
+    "path": "E:/ForMalTeC/Wound_segmentation_III/Data",
+    "preprocess_path": "E:/ForMaLTeC/Wound_segmentation_III/GIT/IRM_Formaltec/New_Code/training",
     "model_version": "v1.2",
-    "encoder": "senet154",
+    "encoder": "resnet101",
     "encoder_weights": "imagenet",
     "activation": "softmax",
-    "batch_size": 10,
+    "batch_size": 8,
     "num_epochs": 150,
-    "optimizer_lr": 0.001,
+    "optimizer_lr": 0.0001,
     "optimizer": "adam",
-    "lr_scheduler_gamma": 0.9,
+    "lr_scheduler_gamma": 0.95,
     "loss": "cross_entropy",
     "metrics": ["accuracy", "iou_score"],
     "segmentation_classes": 15,
