--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -3,7 +3,7 @@
     "path": "C:/users/comi/Desktop/Wound_segmentation_III/Data",
     "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/GIT/IRM_Formaltec/New_Code/training",
     "model_version": "v1.2",
-    "encoder": "senet154",
+    "encoder": "transformer",
     "encoder_weights": "imagenet",
     "activation": "softmax",
     "batch_size": 10,
