--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,14 +1,14 @@
 {
     "device": "cuda",
-    "path": "C:/users/comi/Desktop/Wound_segmentation_III/Data",
+    "path": "E:/ForMalTeC/Wound_segmentation_III/Data",
     "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/GIT/IRM_Formaltec/New_Code/training",
-    "model_version": "v1.2",
+    "model_version": "v1.3",
     "encoder": "transformer",
     "encoder_weights": "imagenet",
     "activation": "softmax",
-    "batch_size": 8,
-    "num_epochs": 150,
-    "optimizer_lr": 0.0001,
+    "batch_size": 3,
+    "num_epochs": 100,
+    "optimizer_lr": 0.001,
     "optimizer": "adam",
     "lr_scheduler_gamma": 0.95,
     "loss": "cross_entropy",
@@ -17,7 +17,7 @@
     "class_weights": [0.01,0.99],
     "dice": true,
     "grad_clip_value": 1.0,
-    "display_image": "False",
+    "display_image": false,
     "num_workers": 0,
-    "object_detection": "False"
+    "object_detection": false
 }
