--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,9 +1,9 @@
 {
     "device": "cuda",
-    "path": "E:/ForMalTeC/Wound_segmentation_III/Data",
+    "path": "C:/users/comi/Desktop/Wound_segmentation_III/Data",
     "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/GIT/IRM_Formaltec/New_Code/training",
     "model_version": "v1.3",
-    "encoder": "transformer",
+    "encoder": "mit_b5",
     "encoder_weights": "imagenet",
     "activation": "softmax",
     "batch_size": 3,
