--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -3,7 +3,7 @@
     "path": "C:/Users/comi/Desktop/Wound_segmentation_III/Data",
     "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/IRM_Formaltec/New_Code/training",
     "model_version": "v1.3",
-    "encoder": "mit_b5",
+    "encoder": "timm-regnety_320",
     "encoder_weights": "imagenet",
     "activation": "softmax",
     "batch_size": 6,
@@ -16,8 +16,8 @@
     "segmentation_classes": 15,
     "class_weights": [0.01,0.99],
     "dice": true,
-    "grad_clip_value": 10,
-    "display_image": true,
-    "num_workers": 1,
+    "grad_clip_value": 5,
+    "display_image": false,
+    "num_workers": 0,
     "object_detection": false
 }
