--- a/New_Code/configs/preprocessing_config.json
+++ b/New_Code/configs/preprocessing_config.json
@@ -12,5 +12,6 @@
     "wound_classes": ["background", "wound"],
     "device": "cuda",
     "target_size": [640, 640],
-    "segmentation": "multiclass"
+    "segmentation": "multiclass",
+    "yolo_path": "C:/Users/comi/Desktop/Wound_segmentation_III/Data/YOLO"
 }
