--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,7 +1,7 @@
 {
     "device": "cuda",
-    "path": "C:/Users/comi/Desktop/Wound_segmentation_III/Data",
-    "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/GIT/IRM_Formaltec/New_Code/training",
+    "path": "E:/ForMalTeC/Wound_segmentation_III/Data",
+    "preprocess_path": "E:/ForMalTeC/Wound_segmentation_III/Data",
     "model_version": "v1.3",
     "encoder": "timm-regnety_320",
     "encoder_weights": "imagenet",
