finetuning yolo incorporation

--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,23 +1,22 @@
 {
     "device": "cuda",
-    "path":  "C:/users/comi/Desktop/Wound_segmentation_III/Data",
-    "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/GIT/IRM_Formaltec/New_Code/training",
+    "path":  "C:/users/comi/Desktop/Wound_Segmentation_III/Data",
+    "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/IRM_Formaltec/New_Code/training",
     "model_version": "v1.3",
-    "encoder": "timm-regnety_320",
+    "encoder": "resnet152",
     "encoder_weights": "imagenet",
     "activation": "softmax",
-    "batch_size": 6,
+    "batch_size": 32,
     "num_epochs": 150,
     "optimizer_lr": 0.01,
     "optimizer": "adam",
     "lr_scheduler_gamma": 0.95,
-    "loss": "cross_entropy",
     "metrics": ["accuracy", "iou_score"],
     "segmentation_classes": 15,
-    "class_weights": [0.01,0.99],
+    "class_weights": [0.1,0.9],
     "dice": true,
-    "grad_clip_value": 5,
-    "display_image": false,
-    "num_workers": 0,
+    "grad_clip_value": 10,
+    "display_image": true,
+    "num_workers": 8,
     "object_detection": false
 }
