--- a/New_Code/configs/preprocessing_config.json
+++ b/New_Code/configs/preprocessing_config.json
@@ -12,6 +12,6 @@
     "wound_classes": ["background", "wound"],
     "device": "cuda",
     "target_size": [256, 256],
-    "segmentation": "binary",
+    "segmentation": "multiclass",
     "yolo_path": "E:/ForMalTeC/Wound_segmentation_III/Data/YOLO" 
 }
