--- a/New_Code/configs/preprocessing_config.json
+++ b/New_Code/configs/preprocessing_config.json
@@ -1,6 +1,5 @@
 
 {
-    "image_size": [512, 512],
     "mean": [0.485, 0.456, 0.406],
     "std": [0.229, 0.224, 0.225],
     "augmentation": {
@@ -11,7 +10,7 @@
     },
     "wound_classes": ["background", "wound"],
     "device": "cuda",
-    "target_size": [256, 256],
-    "segmentation": "multiclass",
+    "target_size": [384, 384],
+    "segmentation": "binary",
     "yolo_path": "E:/ForMalTeC/Wound_segmentation_III/Data/YOLO" 
 }
