--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,22 +1,23 @@
 {
     "device": "cuda",
-    "path":  "C:/users/comi/Desktop/Wound_segmentation_III/Data" ,
-    "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/GIT/IRM_Formaltec/New_Code/training",
+    "path":  "E:/ForMalTeC/Wound_segmentation_III/Data" ,
+    "preprocess_path": "E:/ForMaLTeC/Wound_segmentation_III/GIT/IRM_Formaltec/New_Code/training",
     "model_version": "v1.4",
     "encoder": "transformer",
     "encoder_weights": "imagenet",
-    "activation": "softmax",
-    "batch_size": 6,
+    "activation": null,
+    "batch_size": 12,
     "num_epochs": 150,
-    "optimizer_lr": 0.01,
+    "optimizer_lr": 0.0001,
     "optimizer": "adam",
-    "lr_scheduler_gamma": 0.95,
+    "lr_scheduler_gamma": 0.999,
     "metrics": ["accuracy", "iou_score"],
-    "segmentation_classes": 11,
-    "class_weights": [0.1,0.9],
+    "segmentation_classes": 2,
+    "class_weights": [1,60],
     "dice": true,
     "grad_clip_value": 10,
-    "display_image": true,
-    "num_workers": 6,
-    "object_detection": true
+    "display_image": false,
+    "num_workers": 12,
+    "object_detection": false,
+    "mixed_precision": true
 }
