--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -8,7 +8,7 @@
     "activation": null,
     "batch_size": 12,
     "num_epochs": 150,
-    "optimizer_lr": 0.0001,
+    "optimizer_lr": 0.001,
     "optimizer": "adam",
     "lr_scheduler_gamma": 0.999,
     "metrics": ["accuracy", "iou_score"],
@@ -16,8 +16,8 @@
     "class_weights": [1,60],
     "dice": true,
     "grad_clip_value": 10,
-    "display_image": false,
-    "num_workers": 12,
+    "display_image": true,
+    "num_workers": 10,
     "object_detection": false,
     "mixed_precision": true
 }
