--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,23 +1,23 @@
 {
     "device": "cuda",
-    "path":  "E:/ForMalTeC/Wound_segmentation_III/Data" ,
-    "preprocess_path": "E:/ForMaLTeC/Wound_segmentation_III/GIT/IRM_Formaltec/New_Code/training",
+    "path":  "C:/users/comi/Desktop/Wound_Segmentation_III/Data" ,
+    "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/IRM_Formaltec/New_Code/training",
     "model_version": "v1.4",
     "encoder": "transformer",
     "encoder_weights": "imagenet",
     "activation": null,
-    "batch_size": 12,
+    "batch_size": 16,
     "num_epochs": 150,
-    "optimizer_lr": 0.001,
+    "optimizer_lr": 0.0001,
     "optimizer": "adam",
     "lr_scheduler_gamma": 0.999,
     "metrics": ["accuracy", "iou_score"],
-    "segmentation_classes": 2,
+    "segmentation_classes": 11,
     "class_weights": [1,60],
     "dice": true,
     "grad_clip_value": 10,
     "display_image": true,
-    "num_workers": 10,
+    "num_workers": 1,
     "object_detection": false,
     "mixed_precision": true
 }
