--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -7,17 +7,21 @@
     "encoder_weights": "imagenet",
     "activation": null,
     "batch_size": 16,
-    "num_epochs": 150,
+    "num_epochs": 100,
     "optimizer_lr": 0.0001,
     "optimizer": "adam",
     "lr_scheduler_gamma": 0.999,
     "metrics": ["accuracy", "iou_score"],
     "segmentation_classes": 11,
     "class_weights": [1,60],
-    "dice": true,
+    "dice": false,
+    "focal": true,
+    "lambda": 5,
+    "sampler": true,
     "grad_clip_value": 10,
-    "display_image": true,
-    "num_workers": 1,
+    "display_image": false,
+    "num_workers": 10,
     "object_detection": false,
-    "mixed_precision": true
+    "mixed_precision": true,
+    "grid_search": true
 }
