working on disabling low freq classes

--- a/New_Code/configs/preprocessing_config.json
+++ b/New_Code/configs/preprocessing_config.json
@@ -1,4 +1,3 @@
-
 {
     "mean": [0.485, 0.456, 0.406],
     "std": [0.229, 0.224, 0.225],
@@ -13,5 +12,29 @@
     "target_size": [384, 384],
     "segmentation": "multiclass",
     "yolo_path": "C:/users/comi/Desktop/Wound_Segmentation_III/Data/YOLO",
-    "disable_low_frequency_classes": true
+    "exclude_images_with_classes": false,
+    "classes_to_exclude": [3, 7, 9],
+    "class_names":  {
+        "0": "background",
+        "1": "ungeformer_bluterguss",
+        "2": "geformter_bluterguss",
+        "3": "stich", 
+        "4": "schnitt",
+        "5": "thermal",
+        "6": "skin_abrasion",
+        "7": "puncture_gun_shot",  
+        "8": "quetsch_riss_wunden",
+        "9": "Halbscharfe_gewalt",  
+        "10": "Risswunden"
+    },
+    "class_names_excluded":  {
+        "0": "background",
+        "1": "ungeformer_bluterguss",
+        "2": "geformter_bluterguss",
+        "3": "schnitt", 
+        "4": "thermal",
+        "5": "skin_abrasion",
+        "6": "quetsch_riss_wunden",
+        "7": "Risswunden"
+    }
 }
