--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -2,18 +2,19 @@
     "device": "cuda",
     "path":  "C:/users/comi/Desktop/Wound_Segmentation_III/Data" ,
     "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/IRM_Formaltec/New_Code/training",
-    "model_version": "v1.4",
+    "model_version": "v1.5",
     "encoder": "se_resnext101_32x4d",
     "encoder_weights": "imagenet",
     "activation": null,
     "batch_size": 16,
     "num_epochs": 100,
     "optimizer_lr": 0.0001,
-    "optimizer": "adam",
+    "optimizer": "adamw",
     "lr_scheduler_gamma": 0.999,
     "metrics": ["accuracy", "iou_score"],
     "segmentation_classes": 11,
     "class_weights": [1,60],
+    "weight_range_multiclass": [50,200],
     "dice": false,
     "focal": true,
     "lambda": 5,
@@ -23,6 +24,6 @@
     "num_workers": 10,
     "object_detection": false,
     "mixed_precision": true,
-    "grid_search": true
+    "grid_search": false
 
 }
