developed new best model

--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -3,25 +3,25 @@
     "path":  "C:/users/comi/Desktop/Wound_Segmentation_III/Data" ,
     "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/IRM_Formaltec/New_Code/training",
     "model_version": "v1.5",
-    "encoder": "mit_b5",
-    "encoder_weights": "imagenet",
+    "encoder": "timm-efficientnet-l2",
+    "encoder_weights": "noisy-student-475",
     "activation": null,
-    "batch_size": 16,
+    "batch_size": 8,
     "num_epochs": 100,
-    "optimizer_lr": 0.0001,
+    "optimizer_lr": 0.0003,
     "optimizer": "adamw",
     "lr_scheduler_gamma": 0.999,
     "metrics": ["accuracy", "iou_score"],
     "segmentation_classes": 11,
     "class_weights": [1,60],
     "weight_range_multiclass": [50,200],
-    "dice": false,
-    "focal": true,
+    "dice": true,
+    "focal": false,
     "lambda": 5,
-    "sampler": true,
+    "sampler": false,
     "grad_clip_value": 10,
-    "display_image": true,
-    "num_workers": 10,
+    "display_image": false,
+    "num_workers": 8,
     "object_detection": false,
     "mixed_precision": true,
     "grid_search": false
