--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -21,9 +21,8 @@
     "sampler": false,
     "grad_clip_value": 10,
     "display_image": false,
-    "num_workers": 8,
+    "num_workers": 1,
     "object_detection": false,
     "mixed_precision": true,
-    "grid_search": false
-
+    "grid_search": true
 }
