--- a/New_Code/configs/training_config.json
+++ b/New_Code/configs/training_config.json
@@ -1,7 +1,7 @@
 {
     "device": "cuda",
-    "path":  "C:/users/comi/Desktop/Wound_Segmentation_III/Data" ,
-    "preprocess_path": "C:/Users/comi/Desktop/Wound_Segmentation_III/IRM_Formaltec/New_Code/training",
+    "path":  "E:/projects/Wound_Segmentation_III/Data" ,
+    "preprocess_path": "E:/projects/Wound_Segmentation_III/IRM_Formaltec/New_Code/training",
     "model_version": "v1.5",
     "encoder": "timm-efficientnet-l2",
     "encoder_weights": "noisy-student-475",
@@ -12,7 +12,7 @@
     "optimizer": "adamw",
     "lr_scheduler_gamma": 0.999,
     "metrics": ["accuracy", "iou_score"],
-    "segmentation_classes": 11,
+    "segmentation_classes": 2,
     "class_weights": [1,60],
     "weight_range_multiclass": [50,200],
     "dice": true,
@@ -24,5 +24,5 @@
     "num_workers": 1,
     "object_detection": false,
     "mixed_precision": true,
-    "grid_search": true
+    "grid_search": false
 }
