--- a/New_Code/configs/preprocessing_config.json
+++ b/New_Code/configs/preprocessing_config.json
@@ -10,7 +10,7 @@
     "wound_classes": ["background", "wound"],
     "device": "cuda",
     "target_size": [384, 384],
-    "segmentation": "binary",
+    "segmentation": "multiclass",
     "yolo_path": "E:/projects/Wound_Segmentation_III/Data/YOLO",
     "exclude_images_with_classes": true,
     "classes_to_exclude": [3,5, 7, 9,10],
