--- a/New_Code/configs/preprocessing_config.json
+++ b/New_Code/configs/preprocessing_config.json
@@ -1,40 +1,38 @@
 {
-    "mean": [0.485, 0.456, 0.406],
-    "std": [0.229, 0.224, 0.225],
-    "augmentation": {
-        "horizontal_flip": true,
-        "vertical_flip": true,
-        "rotation": 90,
-        "scale": [0.8, 1.2]
+    "normalization": {
+        "mean": [0.485, 0.456, 0.406],
+        "std": [0.229, 0.224, 0.225]
     },
-    "wound_classes": ["background", "wound"],
-    "device": "cuda",
+    "augmentation_settings": {
+        "resize": {"enabled": true},
+        "horizontal_flip": {"enabled": true, "p": 0.5},
+        "vertical_flip": {"enabled": true, "p": 0.5},
+        "random_rotate_90": {"enabled": true, "p": 0.5},
+        "color_jitter": {"enabled": true, "brightness": 0.2, "contrast": 0.2, "saturation": 0.2, "hue": 0.2, "p": 0.5},
+        "random_brightness_contrast": {"enabled": true, "p": 0.5},
+        "hue_saturation_value": {"enabled": true, "p": 0.0},
+        "elastic_transform": {"enabled": true, "p": 0.5},
+        "optical_distortion": {"enabled": true, "p": 0.5},
+        "grid_distortion": {"enabled": true, "p": 0.5},
+        "coarse_dropout": {"enabled": true, "max_holes": 8, "max_height": 32, "max_width": 32, "p": 0.3},
+        "gaussian_blur": {"enabled": true, "blur_limit": [3, 7], "p": 0.2}
+    },
     "target_size": [384, 384],
     "segmentation": "multiclass",
     "yolo_path": "E:/projects/Wound_Segmentation_III/Data/YOLO",
     "exclude_images_with_classes": true,
-    "classes_to_exclude": [3,5, 7, 9,10],
-    "class_names":  {
+    "classes_to_exclude": [3, 5, 7, 9, 10],
+    "class_names": {
         "0": "background",
         "1": "ungeformer_bluterguss",
         "2": "geformter_bluterguss",
-        "3": "stich", 
+        "3": "stich",
         "4": "schnitt",
         "5": "thermal",
         "6": "skin_abrasion",
-        "7": "puncture_gun_shot",  
+        "7": "puncture_gun_shot",
         "8": "quetsch_riss_wunden",
-        "9": "Halbscharfe_gewalt",  
+        "9": "Halbscharfe_gewalt",
         "10": "Risswunden"
-    },
-    "class_names_excluded":  {
-        "0": "background",
-        "1": "ungeformer_bluterguss",
-        "2": "geformter_bluterguss",
-        "3": "schnitt", 
-        "4": "thermal",
-        "5": "skin_abrasion",
-        "6": "quetsch_riss_wunden",
-        "7": "Risswunden"
     }
 }
