--- a/Code/configs/training_config.json
+++ b/Code/configs/training_config.json
@@ -1,7 +1,7 @@
 {
     "data": {
         "path":  "E:/projects/Wound_Segmentation_III/Data" ,
-        "preprocess_path": "E:/projects/Wound_Segmentation_III/IRM_Formaltec/New_Code/training"
+        "preprocess_path": "E:/projects/Wound_Segmentation_III/IRM_Formaltec/Code/training"
     
     },
     "model": {
@@ -9,38 +9,52 @@
         "encoder": "timm-efficientnet-l2",
         "encoder_weights": "noisy-student-475",
         "activation": null,
-        "segmentation_classes": 11,
+        "segmentation_classes": 2,
         "class_weights": [1, 60]
     },
     "training": {
         "batch_size": 8,
         "num_epochs": 100,
-        "learning_rate": 0.0003,
-        "optimizer": "adamw",
-        "lr_scheduler_gamma": 0.999,
+        "split_ratio": 0.8,
         "metrics": ["accuracy", "iou_score"],
-        "weight_range_multiclass": [50, 200],
-        "loss_functions": ["dice"],
-        "lambda_loss": 5,
-        "sampler": false,
+        "sampler": true,
         "grad_clip_value": 10,
         "display_image": false,
         "num_workers": 1,
-        "use_focal_loss": true, 
         "mixed_precision": true,
-        "grid_search": false,
+        "use_diffusion_images": true,
+        "valid_extensions": [".jpg", ".jpeg", ".png", ".bmp", ".tiff"],
+        "final_model_epoch": 150,
+        "f1_average": "macro",
+        "dice_loss_mode": "multiclass",
+        "gradCAM": false,
         "random_seed": 42,
-        "split_ratio": 0.8,
-        "weight_range": [50, 200],
         "focal_loss": {
             "alpha": 0.5,
             "gamma": 4.0,
             "reduction": "mean"
         },
-        "dice_loss_mode": "multiclass",
-        "valid_extensions": [".jpg", ".jpeg", ".png", ".bmp", ".tiff"],
-        "final_model_epoch": 150,
-        "f1_average": "macro",
-        "gradCAM": true
+        "grid_search_enabled": false,
+        "non_grid_search": {
+            "use_focal_loss": false,
+            "learning_rate": 0.0008,
+            "optimizer": "adamw",
+            "lr_scheduler_gamma": 0.999,
+            "weight_range_multiclass": [50, 200],
+            "loss_functions": ["dice"],
+            "lambda_loss": 15
+
+        },
+        "grid_search_parameters": {
+            "learning_rate": [0.0005, 0.0001, 0.0003, 0.001],
+            "optimizer": ["adamw", "sgd"],
+            "lr_scheduler_gamma": [0.999, 0.99, 0.9999],
+            "use_focal_loss": [false, true],
+            "loss_functions": ["dice", "focal_loss"],
+            "lambda_loss": [5, 1, 10]
+        }
+
+
+
     }
 }
