minor bug fixes

--- a/Code/configs/preprocessing_config.json
+++ b/Code/configs/preprocessing_config.json
@@ -18,11 +18,11 @@
         "gaussian_blur": {"enabled": true, "blur_limit": [3, 7], "p": 0.1},
         "clahe": {"enabled": true, "clip_limit": 4.0, "tile_grid_size": [8, 8], "p": 0.3}
     },
-    "target_size": [224, 224],
+    "target_size": [384, 384],
     "segmentation": "multiclass",
     "yolo_path": "E:/projects/Wound_Segmentation_III/Data/YOLO",
     "exclude_images_with_classes": true,
-    "classes_to_exclude": [ 7, 9, 10],
+    "classes_to_exclude": [5, 7, 9, 10],
     "class_names": {
         "0": "background",
         "1": "ungeformer_bluterguss",
