--- a/Code/configs/training_config.json
+++ b/Code/configs/training_config.json
@@ -16,7 +16,11 @@
             "unfreeze_layers_stage3": 16,
             "stage2_lr_factor": 0.3,
             "stage3_lr_factor": 0.05,
-            "dropout_rate": 0.5
+            "dropout_rate": 0.5,
+            "stochastic_depth_rate": 0.1,
+            "use_ema": true,
+            "ema_decay": 0.9999,
+            "early_stopping_patience": 15
         },
         "encoder_weights": "noisy-student-475",
         "activation": null,
